[tool.poetry]
name = "camptown"
version = "0.3.0"
description = "Semantic-HTML player engine"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fluffy-critter/camptown"
documentation = "https://camptown.readthedocs.io"
include = [
    "camptown/__version__.py"
]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
mistune = "^3.0.2"
markupsafe = "^2.1.3"
awesome-slugify = "^1.6.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pylint = "^3.0.2"
autopep8 = "^2.0.4"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
types-python-slugify = "^8.0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
