[tool.poetry]
name = "camptown"
version = "0.3.5"
description = "Semantic-HTML player engine"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fluffy-critter/camptown"
documentation = "https://camptown.readthedocs.io"
include = [
    "camptown/__version__.py"
]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.3"
mistune = "^3.0.2"
markupsafe = "^2.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pylint = "^3.0.2"
autopep8 = "^2.0.4"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
