[tool.poetry]
name = "camptown"
version = "0.3.19"
description = "Semantic-HTML player engine"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fluffy-critter/camptown"
documentation = "https://camptown.readthedocs.io"
include = [
    "camptown/__version__.py"
]

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.5"
mistune = "^3.1.2"
markupsafe = "^3.0.2"
smartypants = "^2.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pylint = "^3.3.4"
autopep8 = "^2.3.2"
sphinx = "^8.2.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
